lunch off: change and improvement in services and controllers created libs for jwt and updates respectively
