# openapi.yaml
@@ -6,9 +6,11 @@ servers:
   - url: http://localhost:8080
     description: backend server
 paths:
-  /users:
+  /posts:
     get:
-      summary: Get all users
+      tags:
+        - posts
+      summary: Get all posts
       responses:
         '200':
           description: Successful response
@@ -17,40 +19,46 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/posts'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
     post:
-      summary: Create a new user
+      tags:
+        - posts
+      summary: Create a new posts
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/posts'
       responses:
         '201':
-          description: User created successfully
+          description: posts created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-  /users/{id}:
-    get:
-      summary: Get a user by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful response
+                $ref: '#/components/schemas/posts'
+        '500':
+          description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                type: object
+                properties:
+                  error:
+                    type: string
     put:
-      summary: Update a user by ID
+      tags:
+        - "posts"
+      summary: Update a posts by ID
       parameters:
         - name: id
           in: path
@@ -62,16 +70,27 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/posts'
       responses:
         '200':
-          description: User updated successfully
+          description: posts updated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/posts'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
     delete:
-      summary: Delete a user by ID
+      tags:
+        - "posts"
+      summary: Delete a posts by ID
       parameters:
         - name: id
           in: path
@@ -80,15 +99,37 @@ paths:
             type: string
       responses:
         '204':
-          description: User deleted successfully
+          description: posts deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+  /auth:
 components:
   schemas:
-    User:
+    posts:
       type: object
       properties:
-        id:
+        _id:
           type: string
-        name:
+        title:
           type: string
-        email:
+        content:
           type: string
+        user_id:
+          type: string
+        time_stamp:
+          type: string
+        
